Fieldset title with special characters outputs incorrect css class - FIXED
List view sorting not working - FIXED
Search shows 404 title if no results with location search - FIXED
Beaver builder editor functionality limited due to font-awesome conflict - FIXED
Required date field validation fires too early - FIXED

v2.0.0.17-rc
Image slider widget not working on listing pages - FIXED
Single image slider will now output as just an image - CHANGED

v2.0.0.16-rc
Updated from font-awesome v4 to v5 - CHANGED
Rest api route & endpoints for fields - ADDED
priceRange custom field added and schema output added - ADDED
Font Awesome & Popup maker raises Uncaught Error - FIXED
DB translate texts tool added - ADDED
Show author own posts on author page if draft or pending - CHANGED
defer and  async tags added to all GD JS - CHANGED
iframe api generation broken (by Google iframe restrictions) changed to new window popup - FIXED
WP Session removed - CHANGED
Remove GeoDirectory data on uninstall if set to do so - ADDED
WP_Country_Database Class implemented to replace own country DB table - CHANGED

v2.0.0.14-beta
Map default language setting is not working for OpenStreetMap - FIXED
GDPR compliance - ADDED
Remove send to friend functionality as it against the GDPR policy - CHANGED
CSS responsive changes and fixes - FIXED
Search page with no query returns its own page - FIXED
Categories widget sub cats not displaying correctly - FIXED
Radio custom fields should not show Yes/No if values are 1/0 without a label - CHANGED/FIXED
Select custom field not showing 0 values - FIXED
OSM address encoder fails if site is non SSL - FIXED
Added setting to be able to disable Yoast SEO on GD pages (if active) - ADDED
Yoast details page og and twitter descriptions using template text instead of post text - FIXED
SD Widget added to be able to display the category description text - ADDED
Some problems with title and meta variables not saving or displaying correctly - FIXED