@@ -23,58 +23,88 @@ if ( ! defined( 'ABSPATH' ) ) {
 			?>
 		</nav>
 
-		<?php if ($addons = GeoDir_Admin_Addons::get_section_data( $current_tab ) ) : ?>
-			<ul class="gd-products"><?php foreach ( $addons as $addon ) :
-					if(388371==$addon->info->id){continue;}// don't show GD Dashbaord
-					?><li class="gd-product">
-							<div class="gd-product-title">
-								<h3><?php
-									if ( ! empty( $addon->info->excerpt) ){
-										echo geodir_help_tip( $addon->info->excerpt );
+		<?php
+		if($current_tab == 'membership'){
+
+			?>
+
+			<div class="gd-membership-tab-conatiner">
+				<h2>With our GeoDirectory Membership you get access to all our products!</h2>
+				<p><a class="button button-primary" href="https://wpgeodirectory.com/downloads/membership/">View Memberships</a></p>
+				<?php if(defined('WP_EASY_UPDATES_ACTIVE')){?>
+
+
+					<h2>Have a membership key?</h2>
+
+					<p>
+						<?php
+						$wpeu_admin = new External_Updates_Admin('wpgeodirectory.com','2');
+						echo $wpeu_admin->render_licence_actions('wpgeodirectory.com', 'membership',array(66235,111330,111327));
+						?>
+					</p>
+				<?php }?>
+			</div>
+
+			<?php
+
+
+		}else{
+			$installed_plugins = get_plugins();
+			if ($addons = GeoDir_Admin_Addons::get_section_data( $current_tab ) ) : ?>
+				<ul class="gd-products"><?php foreach ( $addons as $addon ) :
+						if(388371==$addon->info->id){continue;}// don't show GD Dashbaord
+						?><li class="gd-product">
+								<div class="gd-product-title">
+									<h3><?php
+										if ( ! empty( $addon->info->excerpt) ){
+											echo geodir_help_tip( $addon->info->excerpt );
+										}
+										echo esc_html( $addon->info->title ); ?></h3>
+								</div>
+
+								<span class="gd-product-image">
+									<?php if ( ! empty( $addon->info->thumbnail) ) : ?>
+										<img src="<?php echo esc_attr( $addon->info->thumbnail ); ?>"/>
+									<?php endif;
+
+									if(isset($addon->info->link) && substr( $addon->info->link, 0, 21 ) === "https://wordpress.org"){
+										echo '<a href="'.admin_url('/plugin-install.php?gd_wizard_recommend=true&amp;tab=plugin-information&amp;plugin='.$addon->info->slug).')" data-lity="">';
+										echo '<span class="gd-product-info">'.__('More info','geodirectory').'</span>';
+										echo '</a>';
+									}elseif(isset($addon->info->link) && substr( $addon->info->link, 0, 26 ) === "https://wpgeodirectory.com"){
+										if(defined('WP_EASY_UPDATES_ACTIVE')){
+											$url = admin_url('/plugin-install.php?gd_wizard_recommend=true&amp;tab=plugin-information&amp;plugin='.$addon->info->slug.'&item_id='.$addon->info->id.'&update_url=https://wpgeodirectory.com');
+										}else{
+											// if installed show activation link
+											if(isset($installed_plugins['wp-easy-updates/external-updates.php'])){
+												$url = '#gd-wpeu-required-activation';
+											}else{
+												$url = '#gd-wpeu-required-for-external';
+											}
+										}
+										echo '<a href="'.$url.'" data-lity="">';
+										echo '<span class="gd-product-info">'.__('More info','geodirectory').'</span>';
+										echo '</a>';
 									}
-									echo esc_html( $addon->info->title ); ?></h3>
-							</div>
 
-							<span class="gd-product-image">
-								<?php if ( ! empty( $addon->info->thumbnail) ) : ?>
-									<img src="<?php echo esc_attr( $addon->info->thumbnail ); ?>"/>
-								<?php endif;
+									?>
 
-								if(isset($addon->info->link) && substr( $addon->info->link, 0, 21 ) === "https://wordpress.org"){
-									echo '<a href="'.admin_url('/plugin-install.php?gd_wizard_recommend=true&amp;tab=plugin-information&amp;plugin='.$addon->info->slug).')" data-lity="">';
-									echo '<span class="gd-product-info">'.__('More info','geodirectory').'</span>';
-									echo '</a>';
-								}elseif(isset($addon->info->link) && substr( $addon->info->link, 0, 26 ) === "https://wpgeodirectory.com"){
-									if(defined('WP_EASY_UPDATES_ACTIVE')){
-										$url = admin_url('/plugin-install.php?gd_wizard_recommend=true&amp;tab=plugin-information&amp;plugin='.$addon->info->slug.'&item_id='.$addon->info->id.'&update_url=https://wpgeodirectory.com');
-									}else{
-										$url = '#gd-wpeu-required-for-external';
-									}
-									echo '<a href="'.$url.'" data-lity="">';
-									echo '<span class="gd-product-info">'.__('More info','geodirectory').'</span>';
-									echo '</a>';
-								}
-
-								?>
-
-							</span>
+								</span>
 
 
-							<span class="gd-product-button">
-								<?php
-								echo GeoDir_Admin_Addons::output_button( $addon );
-								?>
-							</span>
+								<span class="gd-product-button">
+									<?php
+									echo GeoDir_Admin_Addons::output_button( $addon );
+									?>
+								</span>
 
 
-							<span class="gd-price"><?php //print_r($addon); //echo wp_kses_post( $addon->price ); ?></span>
+								<span class="gd-price"><?php //print_r($addon); //echo wp_kses_post( $addon->price ); ?></span></li><?php endforeach; ?></ul>
+			<?php endif;
+		}
 
-<!--						<a href="--><?php //echo esc_attr( $addon->info->link ); ?><!--">-->
-<!--						</a>-->
-					</li><?php endforeach; ?></ul>
-		<?php endif; ?>
-
-	<?php } ?>
+	}
+	?>
 
 
 	<div class="clearfix" ></div>
@@ -85,7 +115,8 @@ if ( ! defined( 'ABSPATH' ) ) {
 		<p><?php printf( __( 'All of our GeoDirectory Themes can be found on GeoDirectory.com here: <a href="%s">GeoDirectory Themes</a>', 'geodirectory' ), 'https://wpgeodirectory.com/downloads/category/themes/' ); ?></p>
 	<?php }?>
 
-	<div id="gd-wpeu-required-for-external" class="lity-hide "><span class="gd-notification "><?php _e("The plugin <a href='https://wpeasyupdates.com/' target='_blank'>WP Easy Updates</a> is required to check for and update some installed plugins/themes, please <a href='https://wpeasyupdates.com/wp-easy-updates.zip'>download</a> and install it now.","geodirectory");?></span></div>
+	<div id="gd-wpeu-required-activation" class="lity-hide "><span class="gd-notification "><?php printf( __("The plugin <a href='https://wpeasyupdates.com/' target='_blank'>WP Easy Updates</a> is required to check for and update some installed plugins/themes, please <a href='%s'>activate</a> it now.","geodirectory"),wp_nonce_url(admin_url('plugins.php?action=activate&plugin=wp-easy-updates/external-updates.php'), 'activate-plugin_wp-easy-updates/external-updates.php'));?></span></div>
+	<div id="gd-wpeu-required-for-external" class="lity-hide "><span class="gd-notification "><?php _e("The plugin <a href='https://wpeasyupdates.com/' target='_blank'>WP Easy Updates</a> is required to check for and update some installed plugins/themes, please <a href='http://localhost/wp-admin/plugin-install.php?tab=upload&wpeu-install=true' onclick='window.open(\"https://wpeasyupdates.com/wp-easy-updates.zip\", \"_blank\");' >download</a> and install it now.","geodirectory");?></span></div>
 	<div id="gd-recommended-buy" class="lity-hide ">
 		<span class="gd-notification noti-white">
 			<h3 class="gd-recommended-buy-title"><?php _e("Licence key","geodirectory");?></h3>
